<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>

  <groupId>pentaho</groupId>
  <artifactId>pentaho-mongo-utils</artifactId>
  <version>11.1.0.0-SNAPSHOT</version>
  <packaging>bundle</packaging>
  <name>Pentaho Community Edition Project: ${project.artifactId}</name>
  <description>A library for simplifying the creation and management of MongoDB connections.</description>
  <url>http://www.pentaho.com</url>
  <scm>
    <connection>scm:git:git@github.com:pentaho/${project.artifactId}.git</connection>
    <developerConnection>scm:git:git@github.com:pentaho/${project.artifactId}.git</developerConnection>
    <url>scm:git:git@github.com:pentaho/${project.artifactId}.git</url>
  </scm>

  <properties>
    <mongo-java-driver.version>5.3.0</mongo-java-driver.version>
    <maven-bundle-plugin.version>5.1.9</maven-bundle-plugin.version>
    <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <maven-surefire-plugin.argLine> --add-opens=java.base/java.lang=ALL-UNNAMED </maven-surefire-plugin.argLine>
    <maven.test.skip>true</maven.test.skip>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.mongodb</groupId>
      <artifactId>mongodb-driver-legacy</artifactId>
      <version>${mongo-java-driver.version}</version>
    </dependency>
    <dependency>
      <groupId>org.mongodb</groupId>
      <artifactId>mongodb-driver-core</artifactId>
      <version>${mongo-java-driver.version}</version>
    </dependency>
    <dependency>
      <groupId>org.mongodb</groupId>
      <artifactId>mongodb-driver-sync</artifactId>
      <version>${mongo-java-driver.version}</version>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.felix</groupId>
        <artifactId>maven-bundle-plugin</artifactId>
        <version>${maven-bundle-plugin.version}</version>
        <extensions>true</extensions>
        <configuration>
          <instructions>
            <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
            <Bundle-Version>${project.version}</Bundle-Version>
            <Export-Package>
               org.pentaho.mongo.*;version=${project.version},
               com.mongodb.util;version=${mongo-java-driver.version}
            </Export-Package>
            <Import-Package>
               com.mongodb.*;resolution:=optional,
               org.bson.*;resolution:=optional,
               *
            </Import-Package>
          </instructions>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <profiles>
  </profiles>


</project>
